feat udistrital/autenticacion_mid#65: Filtro supervisor
- Controladores filtroContrato, filtroProveedor y filtroMixto soportan filtro del supervisor del contrato (documento)
