# swagger/swagger.yml
@@ -50,6 +50,11 @@ paths:
         description: Vigencia del contrato,, para evitar el filtro se debe de mandar un 0 (cero)
         required: true
         type: string
+      - in: query
+        name: Supervisor
+        description: Supervisor del contrato. Para evitar el filtro se debe enviar un 0
+        required: true
+        type: string
       responses:
         "200":
           description: '{}'
@@ -77,6 +82,11 @@ paths:
         description: Vigencia del contrato,, para evitar el filtro se debe de mandar un 0 (cero)
         required: true
         type: string
+      - in: query
+        name: Supervisor
+        description: Supervisor del contrato. Para evitar el filtro se debe enviar un 0
+        required: true
+        type: string
       responses:
         "200":
           description: '{}'
@@ -92,6 +102,11 @@ paths:
       - in: query
         name: ProvID
         description: ID del Proveedor
+        required: true
+        type: string
+      - in: query
+        name: Supervisor
+        description: Supervisor del contrato. Para evitar el filtro se debe enviar un 0
         required: true
         type: string
       responses:
